# Talparov

./: CMakeLists.txt  README.md
include/: bitboard.h  board.h  consts.h  defs.h  misc.h  move.h  movegen.h  pv.h  search.h  talparov.h  tptable.h  utils.h
source/: bitboard.cpp  board.cpp  consts.cpp  main.cpp  misc.cpp  move.cpp  movegen.cpp  pv.cpp  search.cpp  talparov.cpp  tptable.cpp  utils.cpp
